--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,12 +6,18 @@ jobs:
   Self-hosted_Job:
     name: "Self Hosted Job"
     runs-on: ubuntu-latest
- 
     steps:
-    - uses: actions/checkout@v4
-    - name: Echo info about agent to log
-      run: |
-        echo "this is my first demo"
-        echo "Current Directory is `pwd`"
-        echo "Operating system details: "
-        lsb_release -a
+        # You may pin to the exact commit or the version.
+        # uses: egor-tensin/setup-gcc@eaa888eb19115a521fa72b65cd94fe1f25bbcaac
+      - uses: egor-tensin/setup-gcc@v1
+        with:
+        # GCC version to install
+        version: # optional, default is latest
+          # Target platform
+        platform: ubuntu-latest # optional, default is x64
+        # Install Cygwin packages
+        cygwin: # optional, default is 0
+        # Set up cc/gcc/c++/g++ executables
+        g++: # optional, default is 1
+        # On Cygwin, replace executable symlinks with hardlinks
+        hardlinks: # optional, default is 0
