--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,23 +1,18 @@
-name: "sample demp pipeline creation"
- 
-on: [workflow_dispatch] #manual trigger 
+name: "Sample Demo Pipeline Creation"
+
+on:
+  workflow_dispatch: # Manual trigger
 
 jobs:
-  Self-hosted_Job:
+  self_hosted_job:
     name: "Self Hosted Job"
     runs-on: ubuntu-latest
     steps:
-        # You may pin to the exact commit or the version.
-        # uses: egor-tensin/setup-gcc@eaa888eb19115a521fa72b65cd94fe1f25bbcaac
-      - uses: egor-tensin/setup-gcc@v1
+      - name: Set up GCC
+        uses: egor-tensin/setup-gcc@v1
         with:
-        # GCC version to install
-        version: # optional, default is latest
-          # Target platform
-        platform: ubuntu-latest # optional, default is x64
-        # Install Cygwin packages
-        cygwin: # optional, default is 0
-        # Set up cc/gcc/c++/g++ executables
-        g++: # optional, default is 1
-        # On Cygwin, replace executable symlinks with hardlinks
-        hardlinks: # optional, default is 0
+          version: latest           # Optional: specify GCC version
+          platform: ubuntu-latest   # Optional: default is x64
+          cygwin: false             # Optional: default is false
+          g++: true                 # Optional: default is true
+          hardlinks: false          # Optional: default is false
